--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-./hosts/default/hardware-configuration.nix # A l'avenir, serait mieux de versionner ceci, pour le moment, une config pour tout
+ # A l'avenir, serait mieux de versionner ceci, pour le moment, une config pour tout
+/hosts/default/hardware-configuration.nix
